<resources>
    <string name="app_name">Caminapp3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_foro">Foro</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="regisUsuario"> Usuario:</string>
    <string name="regisEmail"> Email:</string>
    <string name="regisContraseña"> Contraseña:</string>
    <string name="regisButton">Registrarse</string>

    <string name="titComent">  Título:</string>
    <string name="titTxt">  Texto:</string>
    <string name="insComentButton">Comentar</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>