<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registroUsuario.RegistroUsuario">

    <TextView
        android:id="@+id/tv_regisContraseña"
        android:layout_width="262dp"
        android:layout_height="30dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="15dp"
        android:text="@string/regisContraseña"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_regisEmail" />

    <EditText
        android:id="@+id/et_regisContraseña"
        android:layout_width="262dp"
        android:layout_height="48dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_regisContraseña" />

    <TextView
        android:id="@+id/tv_regisEmail"
        android:layout_width="262dp"
        android:layout_height="30dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="15dp"
        android:text="@string/regisEmail"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_regisUsuario" />

    <EditText
        android:id="@+id/et_regisEmail"
        android:layout_width="262dp"
        android:layout_height="48dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_regisEmail" />

    <TextView
        android:id="@+id/tv_regisUsuario"
        android:layout_width="262dp"
        android:layout_height="30dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="55dp"
        android:text="@string/regisUsuario"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_regisUsuario"
        android:layout_width="262dp"
        android:layout_height="48dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_regisUsuario" />

    <Button
        android:id="@+id/regisButton"
        android:layout_width="155dp"
        android:layout_height="45dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="15dp"
        android:onClick="Registrarse"
        android:text="@string/regisButton"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_regisContraseña" />
</androidx.constraintlayout.widget.ConstraintLayout>