<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.insertarComentario.InsertarComentarioActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="262dp"
        android:layout_height="30dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="76dp"
        android:text="@string/titComent"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_Titulo"
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="262dp"
        android:layout_height="30dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="15dp"
        android:text="@string/titTxt"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Titulo" />

    <EditText
        android:id="@+id/et_Txt"
        android:layout_width="262dp"
        android:layout_height="253dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/regisButton"
        android:layout_width="155dp"
        android:layout_height="45dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="16dp"
        android:onClick="insertarComent"
        android:text="@string/insComentButton"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Txt" />

</androidx.constraintlayout.widget.ConstraintLayout>